<resources>
    <string name="app_name">TLUHUB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    ///login//
    <string name="start">Bắt Đầu</string>
    <string name="welcome">Chào mừng</string>
    <string name="studentHud">Student Hub</string>
    <string name="login">Tiếp Tục</string>
    <string name="password">Mật Khẩu</string>
    <string name="msv">Mã Sinh Viên</string>
    <string name="forgotPassword">Quên Mật Khẩu ?</string>
    <string name="message_request_permission_read_phone_state">Chúng tôi cần được cấp quyền để tiếp tục</string>


    /// main ///
    <string name="home">Trang Chủ</string>
    <string name="discover">Khám Phá</string>
    <string name="user">Tài Khoản</string>
    <string name="infor">Thông tin sinh viên</string>

    /// drawer menu
    <string name="personalInformation">Thông tin cá nhân</string>
    <string name="time">Thời gian</string>
    <string name="setting">Cài đặt</string>
    <string name="QRcode">QR Code</string>
    <string name="trend">Xu hướng</string>
    <string name="studentZone">StudentZone</string>
    <string name="logout">Đăng xuất</string>


    /// tabdiscover///
    <string name="search">Tìm kiếm</string>
    <string name="popularToYou">Phổ biến dành cho bạn</string>
    <string name="qualityAssurance">Đảm bảo chất lượng</string>
    <string name="magazine">Tạp chí</string>
    <string name="library">Thư viện</string>
    <string name="hightlightActivity">Hoạt động nổi bật</string>

    //// qrcode ///
    <string name="stop">Dừng</string>

    /// information
    <string name="email">Email</string>
    <string name="code_user">Mã sinh viên</string>
    <string name="useName">Tên đăng nhập</string>


</resources>