<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <group>-->
    <item android:id="@+id/nav_item_home"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/home" />
    <item android:id="@+id/nav_item_info"
        android:icon="@drawable/ic_round_assignment_ind_24"
        android:title="@string/personalInformation" />
    <item android:id="@+id/nav_item_time"
        android:icon="@drawable/ic_round_access_time_24"
        android:title="@string/time" />
    <item android:id="@+id/nav_item_setting"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/setting" />
    <item android:id="@+id/nav_item_qrCode"
        android:icon="@drawable/ic_round_qr_code_scanner_24"
        android:title="@string/QRcode" />
    <item android:id="@+id/nav_item_trend"
        android:icon="@drawable/ic_round_trending_up_24"
        android:title="@string/trend" />

<!--    </group>-->

    <group android:id="@+id/group_menu">
        <item android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_round_login_24"
            android:title="@string/logout" />
    </group>

<!--    <item android:title="Title 1">-->
<!--        <menu>-->
<!--            <item android:id="@+id/nav_item_six"-->
<!--                android:icon="@drawable/ic_round_person_24"-->
<!--                android:title="Item 6" />-->
<!--            <item android:id="@+id/nav_item_seven"-->
<!--                android:icon="@drawable/ic_round_home_24"-->
<!--                android:title="Item 7" />-->
<!--        </menu>-->
<!--    </item>-->
</menu>