<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_140sdp">
                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:iss_auto_cycle="true"
                    app:iss_period="1000"
                    app:iss_delay="0"/>
            </androidx.cardview.widget.CardView>
            <EditText
                android:id="@+id/etSearch"
                android:elevation="@dimen/_2sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:maxLines="1"
                android:lines="1"
                android:inputType="text"
                android:singleLine="true"
                android:translationZ="@dimen/_12sdp"
                android:hint="@string/search"
                android:background="@drawable/bg_search"
                app:layout_constraintTop_toBottomOf="@id/cv_slider"
                app:layout_constraintBottom_toBottomOf="@+id/cv_slider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_35sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"/>
            <RelativeLayout
                android:translationZ="@dimen/_15sdp"
                android:background="@drawable/bg_search_button"
                android:backgroundTint="@null"
                app:layout_constraintStart_toEndOf="@+id/etSearch"
                app:layout_constraintEnd_toEndOf="@id/etSearch"
                app:layout_constraintTop_toTopOf="@+id/etSearch"
                app:layout_constraintBottom_toBottomOf="@id/etSearch"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_width="@dimen/_38sdp"
                android:layout_height="@dimen/_38sdp">
                <ImageView
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_round_search_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rlPFY"
                app:layout_constraintTop_toBottomOf="@+id/cv_slider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/darkGrey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp">
                <TextView
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:paddingLeft="@dimen/_16sdp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/popularToYou"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopular"
                android:nestedScrollingEnabled="false"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/rlPFY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/rlActivity"
                app:layout_constraintTop_toBottomOf="@+id/rvPopular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/darkGrey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">
                <TextView
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:paddingLeft="@dimen/_16sdp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/hightlightActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvActivity"
                android:nestedScrollingEnabled="false"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/rlActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>